--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Game Name</title>
+    <title>BlackwoodsBlight</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -12,7 +12,7 @@
 <header>
     <div class="header-container">
         <img src="images/logo.png" alt="Game Logo" class="logo">
-        <nav>
+        <nav class="desktop-nav">
             <ul>
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="features.html">NEWS</a></li>
@@ -20,26 +20,50 @@
                 <li><a href="about.html">ABOUT</a></li>
             </ul>
         </nav>
+        <!-- Mobile navigation elements -->
+        <div class="mobile-nav">
+            <img src="images/menu.png" alt="Menu" id="menu-icon">
+            <div class="dropdown-menu">
+                <ul>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="features.html">NEWS</a></li>
+                    <li><a href="gallery.html">GALLERY</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
+                </ul>
+            </div>
+        </div>
     </div>
 </header>
+
+<div class="slogan-container">
+    
+	
+	            <div class="slogan-text">
+                <h1>Echoes of Legends:
+				<br>Turn by Turn
+				<br>Into Blackwood's Tale</h1>
+
+            </div>
+</div>
+
+
 
     <div class="site-container">
 
         <section class="section-paper">
 
-            <div class="logo-container">
-                <img src="D:/Blackwoodsblight/images/big_logo.png" alt="Big Logo">
+            <div class="text-container">
+                <h1>Echoes of Legends:
+				<br>Turn by Turn
+				<br>Into Blackwood's Tale</h1>
+
             </div>
 
-<div class="text-container">
-            <h1>Welcome to the Blackwood forest Adventura!</h1>
-            <p>Dive into a classical dungeon crawler, reimagined with state-of-the-art gameplay mechanics, crafted for your mobile device. Immerse yourself in the nostalgic charm of old-school adventures, amplified by modern design. Your journey awaits - in the palm of your hand!</p>
-            <p>"Blackwood's Blight: Echoes of the Past" is the ultimate dungeon-crawling adventure for any fantasy fan. Enter a world of mystery and secrets as you explore the enchanting Blackwood forest, home to all sorts of creatures, from goblins and orcs to skeletons and liches. But beware, the combat system may be deceptively complex, so sharpen your sword and polish your spellbook.</p>
-            <p>The game's visuals will transport you to a different realm, and the soundtrack will have you humming along as you hack and slash your way through the game. With a plethora of quests, you'll never run out of things to do and the economic system is top-notch, allowing you to buy and sell items to upgrade your gear.</p>
-            <p>Limited-time events offer unique challenges and rewards, so don't miss out! And if you're feeling adventurous, why not try your hand at a side quest or two?</p>
-            <p>Overall, "Blackwood's Blight: Echoes of the Past" is a thrilling and immersive experience that will keep you coming back for more. So, grab your trusty sword, and let's delve into the depths of the Blackwood forest and uncover its secrets!</p>
-        </div>
-		
+            <div class="logo-container">
+                <img src="D:/LandingBWB/images/screenshot_1.png" alt="Big Logo" class="responsive-screenshot_1">
+
+            </div>
+
         </section>
 
         <section class="section-solid">
@@ -65,7 +89,8 @@
     <footer>
         <p>© 2023 by Points Game Forge. All rights reserved.</p>
     </footer>
+	
+	<script src="js/scripts.js"></script>
 </body>
 
 </html>
-
