fix images path

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
 
             <div class="logo-container">
-                <img src="D:/LandingBWB/images/screenshot_1.png" alt="Big Logo" class="responsive-screenshot_1">
+                <img src="images/screenshot_1.png" alt="Big Logo" class="responsive-screenshot_1">
 
             </div>
 
