--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@
             </div>
 </div>
 
+<section class="image-gallery">
+    <div class="gallery-container">
+        <img src="images/ss_1.jpg" alt="Image 1" class="gallery-image" onclick="expandImage(this)">
+        <img src="images/ss_2.jpg" alt="Image 2" class="gallery-image" onclick="expandImage(this)">
+        <img src="images/ss_3.jpg" alt="Image 3" class="gallery-image" onclick="expandImage(this)">
+        <img src="images/ss_4.jpg" alt="Image 4" class="gallery-image" onclick="expandImage(this)">
+    </div>
+</section>
 
 
     <div class="site-container">
