--- a/index.html
+++ b/index.html
@@ -63,9 +63,14 @@
         <section class="section-paper">
 
             <div class="text-container">
-                <h1>Echoes of Legends:
-				<br>Turn by Turn
-				<br>Into Blackwood's Tale</h1>
+                <h1>BLACKWOOD'S BLIGHT</h1>
+			<br>
+			<p><i>• Classical dungeon crawler</i></p>
+			<p><i>• Modern gameplay</i></p>
+			<p><i>• Deep Lore</i></p>
+			<p><i>• Complex combat mechanics</i></p>
+			<p><i>• Amazing dungeons full of secrets</i></p>
+				
 
             </div>
 
@@ -73,6 +78,39 @@
                 <img src="images/screenshot_1.png" alt="Big Logo" class="responsive-screenshot_1">
 
             </div>
+
+<!-- one more -->
+        </section>
+		        <section class="section-paper">
+
+            <div class="text-container">
+				<p> ~ Explore the world by completing quests in handcrafted locations ~</p>
+				<br>
+				<p><i>Our dungeons are lovingly designed with a nod to classic D&D, so be prepared for various checks based on your character's attributes. Who knows what might be hidden behind this suspicious wall?</i></p>
+				
+
+            </div>
+
+            <div class="logo-container">
+                <img src="images/map.png" alt="Big Logo" class="responsive-screenshot_1">
+            </div>
+
+
+        </section>
+		
+		        </section>
+		        <section class="section-paper">
+
+            <div class="text-container">
+				<p>~ Or test yourself in an unlimited procedurally generated dungeon! ~</p> 
+				<br>
+				<p> <i>Sometimes, in your nightmares, you find yourself trapped in endless corridors. Creatures from all around the world are trying to get to you. But with your mighty sword in one hand and a spell ready to be used in the other, let's see for whom this nightmare really is </i></p>
+            </div>
+
+            <div class="logo-container">
+                <img src="images/ss_2.jpg" alt="Big Logo" class="responsive-screenshot_1">
+            </div>
+
 
         </section>
 
