--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
         <section class="section-solid">
             <h1>Trailer</h1>
-            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=aEaU5J_0gxc" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://youtu.be/aEaU5J_0gxc" frameborder="0" allowfullscreen></iframe>
         </section>
 
         <section class="section-paper">
