optimized gallery and changed font color

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon.png">
     <link rel="stylesheet" href="css/styles.css">
+    <script src="js/scripts.js" defer></script>
 </head>
 
 <body>
@@ -44,10 +45,10 @@
 
 <section class="image-gallery">
     <div class="gallery-container">
-        <img src="images/ss_1.jpg" alt="Screenshot of dungeon crawler scene 1" class="gallery-image" onclick="expandImage(this)">
-        <img src="images/ss_2.jpg" alt="Screenshot of dungeon crawler scene 2" class="gallery-image" onclick="expandImage(this)">
-        <img src="images/ss_3.jpg" alt="Screenshot of dungeon crawler scene 3" class="gallery-image" onclick="expandImage(this)">
-        <img src="images/ss_4.jpg" alt="Screenshot of dungeon crawler scene 4" class="gallery-image" onclick="expandImage(this)">
+        <img src="images/ss_1.jpg" alt="Screenshot of dungeon crawler scene 1" class="gallery-image" onclick="expandImage(this)" loading="lazy">
+        <img src="images/ss_2.jpg" alt="Screenshot of dungeon crawler scene 2" class="gallery-image" onclick="expandImage(this)" loading="lazy">
+        <img src="images/ss_3.jpg" alt="Screenshot of dungeon crawler scene 3" class="gallery-image" onclick="expandImage(this)" loading="lazy">
+        <img src="images/ss_4.jpg" alt="Screenshot of dungeon crawler scene 4" class="gallery-image" onclick="expandImage(this)" loading="lazy">
     </div>
 </section>
 
