--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon.png">
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/scripts.js" defer></script>
+    <script src="js/gallery.js" defer></script>
 </head>
 
 <body>
