--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     <li><a href="features.html">NEWS</a></li>
                     <li><a href="gallery.html">GALLERY</a></li>
                     <li><a href="about.html">ABOUT</a></li>
+                    <li><a href="terms.html">TERMS</a></li>
                 </ul>
             </div>
         </div>
