--- a/index.html
+++ b/index.html
@@ -13,109 +13,111 @@
 </head>
 
 <body>
-<header>
-    <div class="header-container">
-        <img src="images/logo.png" alt="Game Logo" class="logo">
-        <nav class="desktop-nav">
-            <ul>
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="features.html">NEWS</a></li>
-                <li><a href="gallery.html">GALLERY</a></li>
-                <li><a href="about.html">ABOUT</a></li>
-            </ul>
-        </nav>
-        <div class="mobile-nav">
-            <img src="images/menu.png" alt="Menu Icon" id="menu-icon">
-            <div class="dropdown-menu">
+    <header>
+        <div class="header-container">
+            <img src="images/logo.png" alt="Game Logo" class="logo">
+            <nav class="desktop-nav">
                 <ul>
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="features.html">NEWS</a></li>
-                    <li><a href="gallery.html">GALLERY</a></li>
-                    <li><a href="about.html">ABOUT</a></li>
+                    <!---- <li><a href="features.html">NEWS</a></li>
+     <li><a href="gallery.html">GALLERY</a></li>
+     <li><a href="about.html">ABOUT</a></li>  -->
                     <li><a href="terms.html">TERMS</a></li>
                 </ul>
+            </nav>
+            <div class="mobile-nav">
+                <img src="images/menu.png" alt="Menu Icon" id="menu-icon">
+                <div class="dropdown-menu">
+                    <ul>
+                        <li><a href="index.html">HOME</a></li>
+                        <li><a href="features.html">NEWS</a></li>
+                        <li><a href="gallery.html">GALLERY</a></li>
+                        <li><a href="about.html">ABOUT</a></li>
+                        <li><a href="terms.html">TERMS</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
-</header>
+    </header>
 
-<div class="slogan-container">
-    <div class="slogan-text">
-        <h1>Echoes of Legends:<br>Turn by Turn<br>Into Blackwood's Tale</h1>
-    </div>
-</div>
-
-<section class="image-gallery">
-    <div class="gallery-container">
-        <img src="images/ss_1.jpg" alt="Screenshot of dungeon crawler scene 1" class="gallery-image" onclick="expandImage(this)" loading="lazy">
-        <img src="images/ss_2.jpg" alt="Screenshot of dungeon crawler scene 2" class="gallery-image" onclick="expandImage(this)" loading="lazy">
-        <img src="images/ss_3.jpg" alt="Screenshot of dungeon crawler scene 3" class="gallery-image" onclick="expandImage(this)" loading="lazy">
-        <img src="images/ss_4.jpg" alt="Screenshot of dungeon crawler scene 4" class="gallery-image" onclick="expandImage(this)" loading="lazy">
-    </div>
-</section>
-
-<div class="site-container">
-    <section class="section-paper">
-        <div class="text-container">
-            <h1>BLACKWOOD'S BLIGHT</h1>
-            <br>
-            <p><i>• Classical dungeon crawler</i></p>
-            <p><i>• Modern gameplay</i></p>
-            <p><i>• Deep Lore</i></p>
-            <p><i>• Complex combat mechanics</i></p>
-            <p><i>• Amazing dungeons full of secrets</i></p>
+    <div class="slogan-container">
+        <div class="slogan-text">
+            <img src="images/icon-market.png" class="corner-icon">
+            <h3>Blackwood's Blight:</h3>
+            <h4>Turn by turn into the epic tale</h4>
+            <h5>Mobile RPG, Turn Based</h5>
         </div>
-        <div class="logo-container">
-            <img src="images/screenshot_1.png" alt="Main game logo" class="responsive-screenshot_1">
+    </div>
+
+    <section class="image-gallery">
+        <div class="gallery-container">
+            <img src="images/ss_1.jpg" alt="Screenshot of dungeon crawler scene 1" class="gallery-image" onclick="expandImage(this)" loading="lazy">
+            <img src="images/ss_2.jpg" alt="Screenshot of dungeon crawler scene 2" class="gallery-image" onclick="expandImage(this)" loading="lazy">
+            <img src="images/ss_3.jpg" alt="Screenshot of dungeon crawler scene 3" class="gallery-image" onclick="expandImage(this)" loading="lazy">
+            <img src="images/ss_4.jpg" alt="Screenshot of dungeon crawler scene 4" class="gallery-image" onclick="expandImage(this)" loading="lazy">
         </div>
     </section>
-
-    <section class="section-paper">
-        <div class="text-container">
-            <p>~ Explore the world by completing quests in handcrafted locations ~</p>
-            <br>
-            <p><i>Our dungeons are lovingly designed with a nod to classic D&D, so be prepared for various checks based on your character's attributes. Who knows what might be hidden behind this suspicious wall?</i></p>
-        </div>
-        <div class="logo-container">
-            <img src="images/map.png" alt="Map of game world" class="responsive-screenshot_1">
-        </div>
-    </section>
-
-    <section class="section-paper">
-        <div class="text-container">
-            <p>~ Or test yourself in an unlimited procedurally generated dungeon! ~</p> 
-            <br>
-            <p><i>Sometimes, in your nightmares, you find yourself trapped in endless corridors. Creatures from all around the world are trying to get to you. But with your mighty sword in one hand and a spell ready to be used in the other, let's see for whom this nightmare really is.</i></p>
-        </div>
-        <div class="logo-container">
-            <img src="images/ss_2.jpg" alt="Procedurally generated dungeon screenshot" class="responsive-screenshot_1">
-        </div>
-    </section>
-
     <section class="section-solid">
         <h1>Trailer</h1>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/aEaU5J_0gxc" frameborder="0" allowfullscreen></iframe>
     </section>
+    <div class="site-container">
+        <section class="section-paper">
+            <div class="text-container">
+                <h1>BLACKWOOD'S BLIGHT</h1>
+                <br>
+                <p>• Classic dungeon crawler</p>
+                <p>• Modern gameplay</p>
+                <p>• Deep Lore</p>
+                <p>• Complex combat mechanics</p>
+                <p>• Amazing dungeons full of secrets</p>
+            </div>
+            <div class="logo-container">
+                <img src="images/screenshot_1.png" alt="Main game logo" class="responsive-screenshot_1">
+            </div>
+        </section>
 
-    <section class="section-paper">
-        <h1>Test Header</h1>
-        <p>Test description.</p>
-    </section>
+        <section class="section-paper">
+            <div class="text-container">
+                <p>Explore the world by completing quests in handcrafted locations</p>
+                <br>
+                <p>Our dungeons are lovingly designed with a nod to classic D&D, so be prepared for various checks based on your character's attributes. Who knows what might be hidden behind this suspicious wall?</p>
+            </div>
+            <div class="logo-container">
+                <img src="images/map.png" alt="Map of game world" class="responsive-screenshot_1">
+            </div>
+        </section>
 
-    <section class="section-one">
-        <!-- Content of the second section -->
-    </section>
+        <section class="section-paper">
+            <div class="text-container">
+                <p> Or test yourself in an endless procedurally generated dungeon!</p>
+            </div>
+            <div class="logo-container">
+                <img src="images/ss_2.jpg" alt="Procedurally generated dungeon screenshot" class="responsive-screenshot_1">
+            </div>
+        </section>
 
-    <section class="section-two">
-        <!-- Content of the third section -->
-    </section>
-</div>
 
-<footer>
-    <p>© 2023 by Points Game Forge. All rights reserved.</p>
-</footer>
 
-<script src="js/scripts.js"></script>
+        <section class="section-paper">
+            <h1>Test Header</h1>
+            <p>Test description.</p>
+        </section>
+
+        <section class="section-one">
+            <!-- Content of the second section -->
+        </section>
+
+        <section class="section-two">
+            <!-- Content of the third section -->
+        </section>
+    </div>
+
+    <footer>
+        <p>© 2023 by Points Game Forge. All rights reserved.</p>
+    </footer>
+
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
