--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+    <!-- Start cookieyes banner -->
+    <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/109447536fb98d66e4661b77/script.js"></script> <!-- End cookieyes banner -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BlackwoodsBlight</title>
@@ -10,7 +12,18 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/scripts.js" defer></script>
     <script src="js/gallery.js" defer></script>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FEQF2XC1ZC"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-FEQF2XC1ZC');
+    </script>
 </head>
+
 
 <body>
     <header>
@@ -20,8 +33,8 @@
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <!---- <li><a href="features.html">NEWS</a></li>
-     <li><a href="gallery.html">GALLERY</a></li>
-     <li><a href="about.html">ABOUT</a></li>  -->
+                    <li><a href="gallery.html">GALLERY</a></li>
+                    <li><a href="about.html">ABOUT</a></li>  -->
                     <li><a href="terms.html">TERMS</a></li>
                 </ul>
             </nav>
