--- a/fff_pp.html
+++ b/fff_pp.html
@@ -75,7 +75,9 @@
         <p>Our Game is not directed to children under 13. We do not knowingly collect personal data from children.</p>
 
         <h2>6. Contact Us</h2>
-        <p>If you have any questions about this Privacy Policy, please contact us via our official Twitter page: <a href="#">https://x.com/Ulv_Bogdan</a></p>
+        <p>If you have any questions about this Privacy Policy, please contact us via our official Twitter page: 
+<a href="https://x.com/Ulv_Bogdan" target="_blank">https://x.com/Ulv_Bogdan</a></p>
+
     </div>
 </body>
 </html>
