--- a/LandingPage.html
+++ b/LandingPage.html
@@ -13,13 +13,13 @@
     </header>
 
     <main class="content">
-      <img src="images/promo1-1.png" alt="Promo 1" />
+      <img src="images/promo.png" alt="Promo 1" />
       <div class="text-content">
         <h2>Far-Far Forest</h2>
         <p>Uncover the fairy-tale world, full of magical stories, unbelievable creatures, and shining fireflies. The forest is waiting for your touch</p>
         <button class="play-button">PLAY</button>
       </div>
-      <img src="images/promo-1.png" alt="Promo 2" />
+      <img src="images/promo1.png" alt="Promo 2" />
     </main>
 
     <footer class="footer">
