--- a/LandingPage.html
+++ b/LandingPage.html
@@ -1,30 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Far-Far Forest</title>
-  <link rel="stylesheet" href="LandingPage.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Far-Far Forest</title>
+    <link rel="stylesheet" href="LandingPage.css" />
+    <link rel="stylesheet" href="css/header.css" />
 </head>
 <body>
-  <div class="landing-page">
-    <header class="fixed-header">
-      <h1>POINTS<br>game studio</h1>
-    </header>
+    <div id="header-placeholder"></div>
+    <script>
+        fetch("header.html")
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById("header-placeholder").innerHTML = data;
+            });
+    </script>
 
-    <main class="content">
-      <img src="images/promo.png" alt="Promo 1" />
-      <div class="text-content">
-        <h2>Far-Far Forest</h2>
-        <p>Uncover the fairy-tale world, full of magical stories, unbelievable creatures, and shining fireflies. The forest is waiting for your touch</p>
-        <button class="play-button">PLAY</button>
-      </div>
-      <img src="images/promo1.png" alt="Promo 2" />
-    </main>
+    <div class="landing-page">
+        <main class="content">
+            <img src="images/promo1.png" alt="Promo 1" />
+            <div class="text-content">
+                <h2>Far-Far Forest</h2>
+                <p>Uncover the fairy-tale world, full of magical stories, unbelievable creatures, and shining fireflies. The forest is waiting for your touch</p>
+                <button class="play-button">PLAY</button>
+            </div>
+            <img src="images/promo.png" alt="Promo 2" />
+        </main>
 
-    <footer class="footer">
-      &copy; 2025 POINTS game studio
-    </footer>
-  </div>
+        <footer class="footer">
+            &copy; 2025 POINTS game studio
+        </footer>
+    </div>
 </body>
 </html>
