--- a/header.html
+++ b/header.html
@@ -1,9 +1,9 @@
 <header class="fixed-header">
     <div class="header-top">
-        <a href="index.html" class="logo">POINTS game studio</a>
+        <a href="index.html" class="logo">POINTS GS</a>
+        <nav class="header-nav">
+            <a href="#news">News</a>
+            <a href="#about">About Us</a>
+        </nav>
     </div>
-    <nav class="header-nav">
-        <a href="#news">News</a>
-        <a href="#about">About Us</a>
-    </nav>
 </header>
