--- a/LandingPage.html
+++ b/LandingPage.html
@@ -28,6 +28,21 @@
             <img src="images/promo.png" alt="Promo 2" />
         </main>
 
+
+        <section class="game-section">
+            <div class="game-screenshot">
+                <img src="images/game-screenshot.png" alt="Game Screenshot" />
+            </div>
+            <div class="game-info">
+                <h2>Far-Far Forest</h2>
+                <p>Explore the enchanting world of Far-Far Forest, solve puzzles, and uncover magical secrets hidden deep within the woods.</p>
+                <a href="https://play.google.com/store" target="_blank">
+                    <img src="images/google-play-badge.png" alt="Get it on Google Play" class="google-play-badge" />
+                </a>
+            </div>
+        </section>
+
+
         <footer class="footer">
             &copy; 2025 POINTS game studio
         </footer>
