--- a/LandingPage.html
+++ b/LandingPage.html
@@ -6,6 +6,7 @@
     <title>Far-Far Forest</title>
     <link rel="stylesheet" href="LandingPage.css" />
     <link rel="stylesheet" href="css/header.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Lusitana&display=swap" rel="stylesheet" />
 </head>
 <body>
     <div id="header-placeholder"></div>
@@ -28,7 +29,6 @@
             <img src="images/promo.png" alt="Promo 2" />
         </main>
 
-
         <section class="game-section">
             <div class="game-screenshot">
                 <img src="images/game-screenshot.png" alt="Game Screenshot" />
@@ -41,7 +41,6 @@
                 </a>
             </div>
         </section>
-
 
         <footer class="footer">
             &copy; 2025 POINTS game studio
