--- a/LandingPage.html
+++ b/LandingPage.html
@@ -42,6 +42,23 @@
             </div>
         </section>
 
+        <section class="news-section">
+            <div class="news-card">
+                <a href="news1.html" class="news-link">
+                    <img src="images/news_1.png" alt="News 1" />
+                    <h3>Yes! We roll out the first release for Android!</h3>
+                    <p>First version is ready to play, and now it's time to reflect on the journey we took to get to this point.</p>
+                </a>
+            </div>
+            <div class="news-card">
+                <a href="news2.html" class="news-link">
+                    <img src="images/news_2.png" alt="News 2" />
+                    <h3>DevLog #Achievements</h3>
+                    <p>A new internal achievements system is here.</p>
+                </a>
+            </div>
+        </section>
+
         <footer class="footer">
             &copy; 2025 POINTS game studio
         </footer>
