--- a/LandingPage.html
+++ b/LandingPage.html
@@ -60,8 +60,11 @@
         </section>
 
         <footer class="footer">
-            &copy; 2025 POINTS game studio
+            <div class="footer-inner">
+                &copy; 2025 POINTS game studio
+            </div>
         </footer>
+
     </div>
 </body>
 </html>
