--- a/header.html
+++ b/header.html
@@ -1,5 +1,5 @@
 <header class="fixed-header">
-    <div class="header-inner">
+    <div class="header-top">
         <a href="index.html" class="logo">POINTS GS</a>
         <nav class="header-nav">
             <a href="#news">News</a>
