--- a/LandingPage.html
+++ b/LandingPage.html
@@ -19,52 +19,53 @@
     </script>
 
     <div class="landing-page">
-        <main class="content">
-            <img src="images/promo1.png" alt="Promo 1" />
-            <div class="text-content">
-                <h2>Far-Far Forest</h2>
-                <p>Uncover the fairy-tale world, full of magical stories, unbelievable creatures, and shining fireflies. The forest is waiting for your touch</p>
-                <button class="play-button">PLAY</button>
-            </div>
-            <img src="images/promo.png" alt="Promo 2" />
-        </main>
+        <div class="page-inner">
+            <main class="content">
+                <img src="images/promo1.png" alt="Promo 1" />
+                <div class="text-content">
+                    <h2>Far-Far Forest</h2>
+                    <p>Uncover the fairy-tale world, full of magical stories, unbelievable creatures, and shining fireflies. The forest is waiting for your touch</p>
+                    <button class="play-button">PLAY</button>
+                </div>
+                <img src="images/promo.png" alt="Promo 2" />
+            </main>
 
-        <section class="game-section">
-            <div class="game-screenshot">
-                <img src="images/game-screenshot.png" alt="Game Screenshot" />
-            </div>
-            <div class="game-info">
-                <h2>Far-Far Forest</h2>
-                <p>Explore the enchanting world of Far-Far Forest, solve puzzles, and uncover magical secrets hidden deep within the woods.</p>
-                <a href="https://play.google.com/store" target="_blank">
-                    <img src="images/google-play-badge.png" alt="Get it on Google Play" class="google-play-badge" />
-                </a>
-            </div>
-        </section>
+            <section class="game-section">
+                <div class="game-screenshot">
+                    <img src="images/game-screenshot.png" alt="Game Screenshot" />
+                </div>
+                <div class="game-info">
+                    <h2>Far-Far Forest</h2>
+                    <p>Explore the enchanting world of Far-Far Forest, solve puzzles, and uncover magical secrets hidden deep within the woods.</p>
+                    <a href="https://play.google.com/store" target="_blank">
+                        <img src="images/google-play-badge.png" alt="Get it on Google Play" class="google-play-badge" />
+                    </a>
+                </div>
+            </section>
 
-        <section class="news-section">
-            <div class="news-card">
-                <a href="news1.html" class="news-link">
-                    <img src="images/news_1.png" alt="News 1" />
-                    <h3>Yes! We roll out the first release for Android!</h3>
-                    <p>First version is ready to play, and now it's time to reflect on the journey we took to get to this point.</p>
-                </a>
-            </div>
-            <div class="news-card">
-                <a href="news2.html" class="news-link">
-                    <img src="images/news_2.png" alt="News 2" />
-                    <h3>DevLog #Achievements</h3>
-                    <p>A new internal achievements system is here.</p>
-                </a>
-            </div>
-        </section>
+            <section class="news-section">
+                <div class="news-card">
+                    <a href="news1.html" class="news-link">
+                        <img src="images/news_1.png" alt="News 1" />
+                        <h3>Yes! We roll out the first release for Android!</h3>
+                        <p>First version is ready to play, and now it's time to reflect on the journey we took to get to this point.</p>
+                    </a>
+                </div>
+                <div class="news-card">
+                    <a href="news2.html" class="news-link">
+                        <img src="images/news_2.png" alt="News 2" />
+                        <h3>DevLog #Achievements</h3>
+                        <p>A new internal achievements system is here.</p>
+                    </a>
+                </div>
+            </section>
+        </div>
 
         <footer class="footer">
             <div class="footer-inner">
                 &copy; 2025 POINTS game studio
             </div>
         </footer>
-
     </div>
 </body>
 </html>
