--- a/LandingPage.html
+++ b/LandingPage.html
@@ -35,8 +35,8 @@
                     <img src="images/game-screenshot.png" alt="Game Screenshot" />
                 </div>
                 <div class="game-info">
-                    <h2>Far-Far Forest</h2>
-                    <p>Explore the enchanting world of Far-Far Forest, solve puzzles, and uncover magical secrets hidden deep within the woods.</p>
+                    <h2>REVEAL THE HIDDEN LORE OF THE ENCHANTED FOREST</h2>
+                    <p>Explore the depths of an ancient forest filled with mysteries and wonder. Solve intricate puzzles and discover magical secrets hidden deep within the woods. Uncover ancient lore and piece together a story that has been long forgotten. Traverse breathtaking landscapes, unlock hidden paths, and interact with enchanted objects that bring the forest to life. Let your curiosity guide you through a world where every shadow hides a tale and every clearing offers a new discover</p>
                     <a href="https://play.google.com/store" target="_blank">
                         <img src="images/google-play-badge.png" alt="Get it on Google Play" class="google-play-badge" />
                     </a>
