--- a/LandingPage.html
+++ b/LandingPage.html
@@ -9,6 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Lusitana&display=swap" rel="stylesheet" />
 </head>
 <body>
+    <img src="images/promo_0.png" alt="Promo 0" class="promo-0" />
+
     <div id="header-placeholder"></div>
     <script>
         fetch("header.html")
@@ -62,9 +64,7 @@
         </div>
 
         <footer class="footer">
-            <div class="footer-inner">
-                &copy; 2025 POINTS game studio
-            </div>
+            <div class="footer-inner">&copy; 2025 POINTS game studio</div>
         </footer>
     </div>
 </body>
