--- a/header.html
+++ b/header.html
@@ -1,6 +1,8 @@
 <header class="fixed-header">
-    <div class="header-top">
-        <a href="index.html" class="logo">POINTS GS</a>
+    <div class="header-inner">
+        <a href="index.html" class="logo">
+            <img src="images/logo_0.png" alt="Logo" class="logo-img" />
+        </a>
         <nav class="header-nav">
             <a href="#news">News</a>
             <a href="#about">About Us</a>
