--- a/LandingPage.html
+++ b/LandingPage.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Start cookieyes banner -->
+    <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/109447536fb98d66e4661b77/script.js"></script>
+    <!-- End cookieyes banner -->
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Far-Far Forest</title>
