--- a/fff_pp.html
+++ b/fff_pp.html
@@ -31,9 +31,18 @@
             text-decoration: underline;
         }
     </style>
+    <link rel="stylesheet" href="/css/header.css" />
 </head>
 <body>
-    <div class="container">
+    <div id="header-placeholder"></div>
+    <script>
+        fetch("header.html")
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById("header-placeholder").innerHTML = data;
+            });
+    </script>
+    <div class="container" style="margin-top: 80px;">
         <h1>Privacy Policy</h1>
         <p>Effective Date: 15/01/2025</p>
         
