--- a/fff_terms.html
+++ b/fff_terms.html
@@ -35,9 +35,18 @@
             padding-left: 20px;
         }
     </style>
+    <link rel="stylesheet" href="/css/header.css" />
 </head>
 <body>
-    <div class="container">
+    <div id="header-placeholder"></div>
+    <script>
+        fetch("header.html")
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById("header-placeholder").innerHTML = data;
+            });
+    </script>
+    <div class="container" style="margin-top: 80px;">
         <h1>Terms and Conditions</h1>
         <p><strong>Last updated:</strong> 15/01/2025</p>
         
