cursor test and addign headers to terms and policy

--- a/fff_pp.html
+++ b/fff_pp.html
@@ -96,7 +96,7 @@
         <p>We may update this Privacy Policy at any time without prior notice. Continued use of the Game after changes means you accept the updated policy.</p>
 
         <h2>10. Contact Us</h2>
-        <p>For any questions or concerns about this Privacy Policy, please contact us via our official Twitter page: <a href="https://x.com/Ulv_Bogdan" target="_blank">https://x.com/Ulv_Bogdan</a></p>
+        <p>For any questions or concerns about this Privacy Policy, please contact us via email: info@points.gs</p>
     </div>
 </body>
 </html>
