--- a/news_2.html
+++ b/news_2.html
@@ -11,6 +11,10 @@
 </head>
 
 <body>
+    <div class="top-banner">
+        <img src="images/news_2.png" alt="News 2" onerror="this.style.display='none';" />
+    </div>
+
     <div id="header-placeholder"></div>
     <script>
         fetch("../header.html")
@@ -29,58 +33,58 @@
             </p>
         </div>
 
-        <h1 class="news-title">DevLog #1: Achievements and Lore</h1>
+        <h1 class="news-title">DevLog #1: Achievements</h1>
 
         <p class="news-subtitle"><em>Reminder: you’re reading a DevLog — thoughts and reflections from the developer of Far-Far Forest. No AI or GMO — just hand-made.</em></p>
 
         <section class="news-content">
-            <p>Your game — your achievements. Has a nice ring to it, doesn’t it?</p>
-            <p>Looking back, the decision to create my own achievement system was pretty spontaneous.</p>
-            <p>For some reason, I just didn’t like the default Play Market achievements — too monotonous, too boring.</p>
-            <p>Besides, it seemed like a fairly simple task I could complete quickly to take a short break from level design and focus on something else.</p>
-            <p>And for once, my estimate turned out to be spot on (that doesn’t happen often, does it?).</p>
-            <p>So what do we have now?</p>
+            <p>Your game — your achievements. Sounds pretty good, doesn’t it?</p>
+            <p>The decision to create my own achievement system, as I recall now, was spontaneous.</p>
+            <p>For some reason, I simply didn’t like how the Play Market achievements looked — monotonous and dull.</p>
+            <p>Besides, it seemed like a pretty simple task that could be done quickly and would let me take a short break from level design to focus on something else.</p>
+            <p>And this time, the estimate was actually quite successful (which doesn’t happen often, does it?).</p>
+            <p>So, what do we have now?</p>
 
             <figure class="news-image news-image-original-ratio">
                 <img src="images/ach_menu.png" alt="Achievements menu in Far-Far-Forest" />
                 <figcaption>A new row in the menu</figcaption>
             </figure>
 
-            <p>First of all, my own flexible system with two types of achievements: ones that you need to accumulate to unlock, and ones that are granted immediately.</p>
-            <p>The pop-ups turned out quite charming, and the overall design fits perfectly with the game’s atmosphere.</p>
+            <p>First of all, my own flexible system with two types of achievements: those that need to be accumulated to unlock and those that are granted immediately.</p>
+            <p>Pretty cute pop-ups and an overall design that fits well into the general atmosphere.</p>
 
             <figure class="news-image news-image-original-ratio">
                 <img src="images/ach_screen.png" alt="Achievement screen with details" />
-                <figcaption>Now it looks so. First one in the list with a green progress bar</figcaption>
+                <figcaption>Now it looks like this. First one in the list with a green progress bar</figcaption>
             </figure>
 
-            <p>I also had an idea: what if, when you unlocked an achievement, you’d get a little piece of the world’s lore?</p>
-            <p>Because believe me — there’s so much to tell!</p>
-            <p>But I couldn’t find a convenient or intuitive way to pull it off.</p>
-            <p>I thought about adding it to the description, but since you can read that even without unlocking the achievement, the idea fell apart.</p>
+            <p>There was also an idea to make it so that when you unlock an achievement, you’d get a small piece of the world’s lore.</p>
+            <p>Because believe me — there’s a lot to tell!</p>
+            <p>But I couldn’t find a convenient and intuitive way to do it.</p>
+            <p>I thought about adding it to the description, but you can read that even if you haven’t earned the achievement, so that idea didn’t work out.</p>
 
-            <p>A few words about the lore — and the pain that comes with it.</p>
-            <p>I don’t know how to share it with you!</p>
-            <p>Or rather, I don’t know how to do it the way I want.</p>
-            <p>Because this text is for the “chosen ones,” those who are truly interested — so I’ll reveal a few cards (God, how that word sounds so filthy in the context of recent events).</p>
+            <p>A few words about the lore and the pain that comes with it.</p>
+            <p>I don’t know how to tell it to you!</p>
+            <p>Or rather, I don’t know how to do it in the way I intended.</p>
+            <p>Since this text is for the “chosen ones,” those who are truly interested, I’ll reveal a few cards (God, how the word “cards” sounds so vile in the context of recent events).</p>
 
             <blockquote>
                 In the Far-Far Forest, full of wonders and magic, there once lived a King — the Wise Oak.<br><br>
-                His rule was honest and just, yet, as it often goes, not everyone shared his virtues. Even in a fairy tale.<br><br>
-                Deep in the woods, beneath the mountain, grew the one whose cunning and bitterness brought an end to the ancient order.<br><br>
-                There is no more Oak — Chestnut now reigns. And those who could still stand against his evil will are no more.<br><br>
-                Little fireflies, who once gifted their light and strength to the Wise Ruler, now hide from the tyrant’s minions — the forest shadows, echoes of a life long past. They’re snatched into ancient lanterns and thrown without will under the roots of the Father of Thorny Fruits — the Great Chestnut.<br><br>
-                How long will this silent oppression of Evil Will last? Yes, far too long.<br>
+                His reign was honest and just, yet, as it often happens, not everyone shared those virtues. Even in a fairy tale.<br><br>
+                Deep in the woods, beneath the mountain, grew the one whose cunning and resentment put an end to the ancient order.<br><br>
+                There is no more Oak — Chestnut now reigns. And those who could still defy his wicked will are no more.<br><br>
+                Little fireflies, who once gave their light and strength to the Wise Ruler, now hide from the tyrant’s minions — the forest shadows, echoes of a life long past. They are snatched into ancient lanterns and thrown without will under the roots of the Father of Thorny Fruits — the Great Chestnut.<br><br>
+                How long does this silent oppression of Evil Will last? Yes, far too long.<br>
                 Will it last forever? No, for a new Light has already been born that will overcome the Darkness.
             </blockquote>
 
-            <p>This is just a fragment of the story that’s bursting to be told, and I have to find a way to share it with you.</p>
-            <p>I don’t want to shove it in your face, but I don’t want to hide it away completely either.</p>
-            <p>Anyway, this was supposed to be a text about achievements, and I got a little carried away.</p>
-            <p>But what else is there to say?</p>
+            <p>This is just a part of the story that’s bursting to come out, and I have to tell it to you somehow.</p>
+            <p>I don’t want to do it “in your face,” but I also don’t want to hide it too much.</p>
+            <p>In any case, this was supposed to be a text about achievements, and I got a little carried away.</p>
+            <p>But what more can I say about them?</p>
             <p>They’re here.</p>
-            <p>I made them the way I saw fit — and that’s already something.</p>
-            <p>Now I’m waiting for your feedback.</p>
+            <p>I made them the way I saw it — and that’s already cool.</p>
+            <p>Now I’m waiting for feedback.</p>
         </section>
     </article>
 
@@ -105,7 +109,6 @@
             modal.style.display = "none";
         };
 
-        // Клік по фону або по самому зображенню — закриває
         modal.onclick = () => {
             modal.style.display = "none";
         };
