--- a/fff_terms.html
+++ b/fff_terms.html
@@ -80,8 +80,8 @@
         <h2>9. Changes to Terms</h2>
         <p>We may update these Terms and Conditions at any time. Continued use of the game after updates means you accept the changes.</p>
         
-        <h2>10. Contact Information</h2>
-        <p>For any questions or concerns, please contact us via our official Twitter page: <a href="https://x.com/Ulv_Bogdan" target="_blank">https://x.com/Ulv_Bogdan</a></p>
+        <h2>10. Contact Us</h2>
+        <p>For any questions or concerns about this Terms and Conditions, please contact us via email: info@points.gs</p>   
     </div>
 </body>
 </html>
